--- a/ROUGE_test.ipynb
+++ b/ROUGE_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,32 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "from model.extractive import bert_knn, textrank\n",
-    "model = bert_knn()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1610722738.4584692"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "time.time()"
+    "model = bert_knn('bert-base-uncased')"
    ]
   },
   {
@@ -85,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +157,37 @@
       "Finish: 0.71\n",
       "Finish: 0.72\n",
       "Finish: 0.73\n",
-      "Finish: 0.74\n"
+      "Finish: 0.74\n",
+      "Finish: 0.75\n",
+      "Finish: 0.76\n",
+      "Finish: 0.77\n",
+      "Finish: 0.77\n",
+      "Finish: 0.78\n",
+      "Finish: 0.79\n",
+      "Finish: 0.8\n",
+      "Finish: 0.81\n",
+      "Finish: 0.82\n",
+      "Finish: 0.83\n",
+      "Finish: 0.84\n",
+      "Finish: 0.84\n",
+      "Finish: 0.85\n",
+      "Finish: 0.86\n",
+      "Finish: 0.87\n",
+      "Finish: 0.88\n",
+      "Finish: 0.89\n",
+      "Finish: 0.9\n",
+      "Finish: 0.91\n",
+      "Finish: 0.91\n",
+      "Finish: 0.92\n",
+      "Finish: 0.93\n",
+      "Finish: 0.94\n",
+      "Finish: 0.95\n",
+      "Finish: 0.96\n",
+      "Finish: 0.97\n",
+      "Finish: 0.97\n",
+      "Finish: 0.98\n",
+      "Finish: 0.99\n",
+      "Total_time: 3862.5696234703064\n"
      ]
     }
    ],
@@ -221,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rougue1: 0.21996806088753865\n",
-      "Rougue2: 0.11175865037595997\n",
-      "RougueL: 0.1801451421322832\n"
+      "Rougue1: 0.2564538828550391\n",
+      "Rougue2: 0.12539873400579082\n",
+      "RougueL: 0.20986381776397364\n"
      ]
     }
    ],
@@ -239,6 +249,27 @@
     "print(\"Rougue2: {}\".format(np.mean(rouge2_list)))\n",
     "print(\"RougueL: {}\".format(np.mean(rougeL_list)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
